Fix alignment in theme. Add clauses

--- a/app/javascript/app/styles/themes/table/explore-table-theme.scss
+++ b/app/javascript/app/styles/themes/table/explore-table-theme.scss
@@ -8,7 +8,7 @@ $lighter-blue-2: #d4dff4;
   display: flex;
   align-items: flex-end;
 
-  > div {
+  &:nth-child(2) {
     padding: 0 10px 10px;
   }
 }
